# F1C200S

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  download.sh
FreeRTOS/: CMakeLists.txt  FreeRTOSConfig.h  port.c  portISR.c
FreeRTOS/include/: FreeRTOS.h  atomic.h  list.h  portable.h  stream_buffer.h
FreeRTOS/portable/: CMakeLists.txt
FreeRTOS/portable/GCC/ARM9_F1C200S/: port.c  portISR.c
boot/: CMakeLists.txt  main.c  spi_flash.c  sys_dram.c  sys_dram.h  system.c  system.h
f1c100s/: CMakeLists.txt
f1c100s/arm926/inc/: arm32.h  armv5_cache.h  armv5_mmu.h  io.h  linkage.h  sizes.h
f1c100s/drivers/inc/: f1c100s_clock.h  f1c100s_de.h  f1c100s_gpio.h  f1c100s_intc.h  f1c100s_periph.h  f1c100s_pwm.h  f1c100s_sdc.h  f1c100s_timer.h  f1c100s_touch.h  f1c100s_tvd.h  f1c100s_tve.h  f1c100s_uart.h
f1c100s/drivers/src/: f1c100s_clock.c  f1c100s_de.c  f1c100s_gpio.c  f1c100s_intc.c  f1c100s_pwm.c  f1c100s_sdc.c  f1c100s_timer.c  f1c100s_touch.c  f1c100s_tvd.c  f1c100s_tve.c  f1c100s_uart.c
lib/: CMakeLists.txt
lib/display_gfx/: lcd.c  lcd.h
projects/: CMakeLists.txt  display.c  exception.c  main.c  system.c  system.h
